--- a/index.html
+++ b/index.html
@@ -1,24 +1,100 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Mokuzai</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"/>
 
-</head>
-<body>
-    <div class="wrapper">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"/>
+
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  </head>
+  
+
+  <body>
+    <div class="title-container">
+      <div class="logo">
+        <img class="logo-img" src="https://imagizer.imageshack.com/img921/7580/OmiMt2.png"/> 
+        <h2 class="company-name">MOKUZAI</h2>
+      </div>
+
+      <div class="buttons">
+        <i class="material-icons search-button">
+          search
+        </i>
+        <i class="material-icons">
+          menu
+        </i>
+      </div>
+
+      <div class="quote-container">
+        <h1 class="quote">
+          Great design is eliminating all unnecessary details
+        </h1>
+        <p class="author-name">MINH D. TRAH</p>
+      </div>
+
+      <p class="vertical-text">CURATED WOODEN HANDPICKED PRODUCTS</p>
     </div>
-    <div>Sai ho guru</div>
 
+    <div class="products-wrapper">
+      <ul class="filters">
+        <li class="active-filter">Most Popular</li>
+        <li>Lowest Price</li>
+        <li>Highest Price</li>
+      </ul>
 
-    <!-- <div>
-        <img>
-        <h2 class="name">Name</h2>
-        <p class="price">$20.00</p>
-    </div> -->
-    <script src="sdf.js"></script>
-</body>
+      <div class="products"></div>
+
+      <ul class="pages">
+        <li class="active-page"><a href="#">01</a></li>
+        <li><a href="#">02</a></li>
+        <li><a href="#">03</a></li>
+        <li><a href="#">04</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-wrapper">
+      <div class="footer">
+        <ul class="info">
+          <li class="section-name">INFO</li>
+          <li>About</li>
+          <li>Journal</li>
+          <li>Contact</li>
+        </ul>
+
+        
+        <ul class="categories">
+          <li class="section-name">CATEGORIES</li>
+          <li>Wood</li>
+          <li>Fashion</li>
+          <li>UX Stuff</li>
+        </ul>
+
+        
+        <ul class="follow">
+          <li class="section-name">FOLLOW</li>
+          <li style="color:#3C5A99;">Facebook</li>
+          <li style="color:#1DA1F2;">Twitter</li>
+          <li>Instagram</li>
+          <li style="color:#BD081C;"">Pinterest</li>
+        </ul>
+      </div>
+    </div>
+
+    <script src="index.js"></script>
+  </body>
 </html>
